customer page updated

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,14 +22,31 @@
   .md-w-25 {
     width: 25%;
   }
+  .md-w-50 {
+    width: 50%;
+  }
 }
 
-@media (max-width: 768px) {
+@media(min-width: 576px) and (max-width:768px) {
   .sm-relative {
     position: relative;
   }
   .text-sm-white{
     color:white;
+  }
+  .sm-w-25{
+    width: 25%;
+  }
+  .sm-w-75{
+    width: 75%;
+  }
+}
+@media (max-width:576px) {
+  .xs-w-50{
+    width: 50%;
+  }
+  .xs-w-100{
+    width: 100%;
   }
 }
 
@@ -66,13 +83,25 @@
 .h-12{
   height: 3.4rem;
 }
+.h-32{
+  height: 8rem;
+}
+.h-64{
+  height: 16rem;
+}
+.h-72{
+  height: 18rem;
+}
+.h-80{
+  height: 20rem;
+}
+.h-96{
+  height: 24rem;
+}
+
 
 .fixed {
   position: fixed;
-}
-
-.w-64 {
-  width: 16rem;
 }
 
 .w-6 {
@@ -88,9 +117,30 @@
 .w-14{
   width: 3.5rem;
 }
+.w-25{
+  width: 25%;
+}
+.w-32{
+  width: 8rem;
+}
+.w-64{
+  width: 16rem;
+}
+.w-72{
+  width: 18rem;
+}
+.w-80{
+  width: 20rem;
+}
+.w-96{
+  width: 24rem;
+}
 
 .ml-64 {
   margin-left: 16rem;
+}
+.ml-25{
+  margin-left: 25%;
 }
 
 .w-full {
@@ -101,3 +151,4 @@
 .hover-bg-blue-500:hover {
   background-color: rgb(5, 5, 20);
 }
+
