Add, modify, and remove specific files for project update

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,8 +2,12 @@
   background-color: rgb(25, 25, 60);
 }
 
+.sidebar {
+  background-color: rgb(25, 25, 60);
+}
+
 .fabar:hover {
-  color: blue;
+  color:rgb(75, 75, 137);
 }
 
 .focus-outline-none:focus {
