--- a/frontend/src/components/Home/Faqs.css
+++ b/frontend/src/components/Home/Faqs.css
@@ -1,5 +1,5 @@
 .faq-container{
-    background: url('../faqsImages/faq-bg.jpg') no-repeat;
+    background: url('../images/faq-bg.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 }
