--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -111,7 +111,7 @@
 }
 
 .homeBanner{
-    background: url('../homeImages/home-bg.jpg') no-repeat center center ;
+    background: url('..images/home-bg.jpg') no-repeat center center ;
     background-size: cover;
     padding-top: 100px;
     padding-bottom: 100px;
