fix some mini errors in homepage

--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -148,27 +148,36 @@
 .homeBannerIcons{
     margin-top: 40px;
     text-align: center;
-}
+  
 
+}
 .homeBannerIcons a{
-    font-size: 25px;
+    display: inline-block;
+    text-decoration: none;
+}
+.homeBannerIcons a i{
+    font-size: 20px;
     margin-left: 40px;
     padding: 15px 15px;
     background-color: #dc143c;
     color: #fff;
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    display: inline-block;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .homeBannerIcons a:first-child{
     margin-left: 0px;
 }
 
-.homeBannerIcons a:hover{
-    background-color: #f64e70;
+.homeBannerIcons a i:hover{
+    background-color: #ffffff;
+    color: #dc143c;
     transition: .5s all;
+    border: 1px solid #dc143c;
 }
 
 .homePageFeatures{
@@ -187,11 +196,15 @@
     border: 2px solid #f64e70;
     transition: 0.5s all;
 }
-
 .homePageFeatureIcon{
-    height: 50px;
+    display: flex;
+    justify-content: center;
+}
+.homePageFeatureIcon i{
+    height: 60px;
     width: 60px;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     font-size: 40px;
     background-color: #dc143c;
     color: #fff;
@@ -274,11 +287,18 @@
 .homePageSocials p{
     color: #464444;
 }
-.homePageSocialsIconsContainer a{
-    font-size: 20px;
-    height: 20px;
-    width: 20px;
+
+.homePageSocialsIconsContainer a {
+    text-decoration: none;
     display: inline-block;
+}
+.homePageSocialsIconsContainer a i{
+    font-size: 20px;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #dc143c;
     color: #fff;
     padding: 10px;
@@ -286,9 +306,12 @@
     margin: 5px;
 }
 
-.homePageSocialsIconsContainer a:hover{
-    background-color: #f64e70;
+.homePageSocialsIconsContainer a i:hover{
+    background-color: #ffffff;
+    color: #dc143c;
     transition: .5s all;
+    border:2px solid #dc143c;
+    
 }
 
 .homeFooter{
