--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,14 +1,17 @@
 .homeHeaderLogo{
     display: flex;
-    float: left;
-    margin-left: 30px;
+    flex-direction: column;
+    /* margin-top: 100px; */
+    /* margin-left: 30px; */
 }
 
 #logoContainer {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+    /* position: absolute; */
+    margin: 15px;
+    
 }
   
 #logoTitle{
@@ -19,15 +22,17 @@
   }
   
 #ring {
-    width: 35px;
-    height: 35px;
-    border: 1px solid transparent;
-    border-radius: 50%;
+    width: 275px;
+    height: 275px;
+    border: 0px solid transparent;
+    border-radius: 70%;
     position: absolute;
+    z-index: -1;
+    margin-bottom: 100px;
 }
   
 #ring:nth-child(1) {
-    border-bottom: 8px solid rgb(255, 141, 249);
+    border-bottom: 28px solid rgb(255, 141, 249);
     animation: rotate1 2s linear infinite;
 }
   
@@ -42,7 +47,7 @@
 }
   
 #ring:nth-child(2) {
-    border-bottom: 8px solid rgb(255,65,106);
+    border-bottom: 28px solid rgb(255,65,106);
     animation: rotate2 2s linear infinite;
   }
   
@@ -57,7 +62,7 @@
 }
   
 #ring:nth-child(3) {
-    border-bottom: 8px solid rgb(0,255,255);
+    border-bottom: 28px solid rgb(0,255,255);
     animation: rotate3 2s linear infinite;
   }
   
@@ -72,7 +77,7 @@
   }
   
 #ring:nth-child(4) {
-    border-bottom: 8px solid rgb(252, 183, 55);
+    border-bottom: 28px solid rgb(252, 183, 55);
     animation: rotate4 2s linear infinite;
   }
   
@@ -125,14 +130,18 @@
     left: 0;
     right: 0;
     bottom: 0;
+    /* height: 100%;  */
+    background-size:cover;
     background: url('../../../public/images/home/smart-inventory-management-system-1200x627.jpg') no-repeat center center ;
+    background-color: rgb(103, 116, 141);
     opacity: 0.5; /* Set your desired opacity level */
     z-index: -1; /* Place the pseudo-element behind the content */
+    /* background-repeat: no-repeat; */
   }
 .homeBanner{
-    background-size: cover;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    /* background-size:cover; */
+    
+    /* padding-bottom: 100px; */
    
 }
 
@@ -141,8 +150,16 @@
     max-width: 900px;
     height: 65vh;
     margin: 0 auto;
+    /* margin-top: 50px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
-
+.homeBannerHeader{
+    display: flex;
+    flex-direction: column;
+    margin-top: 150px;
+}
 .homeBannerHeader h1{
     text-align: center;
     font-size: 50px;
