--- a/frontend/src/components/Company/CompanyProduct.css
+++ b/frontend/src/components/Company/CompanyProduct.css
@@ -26,15 +26,12 @@
     overflow-x: hidden;
   }
   
-  
   /* Add product.js css */
   
    .maincontainer {
-    max-width: 1100px;
-    margin: 0 auto;
+    margin: auto;
     padding-bottom: 5rem;
-    height: 100vh;
-    max-height: 100%;
+    height: 100%;
     background-color: var(--lightgray);
   } 
   
@@ -70,11 +67,16 @@
   /* add products form */
   .add_product,
   .update_product {
-    max-width: 700px;
+    width: 75%;
     background-color: var(--color2);
     border-radius: 0.5rem;
-    padding: 2rem;
-    margin: 0 auto;
+    padding: 2rem 3rem;
+    height: 75%;
+    /* margin: 0 auto; */
+    margin: auto;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
     margin-top: 2rem;
   }
   .add_product .input_fields,
@@ -83,8 +85,10 @@
     font-size: 1.0rem;
     color: var(--black);
     background-color: var(--white);
-    margin: 1rem 0;
-    width: 100%;
+    margin: 0.5rem auto;
+    width: 90%;
+    
+    
   }
   
   /* submit button */
@@ -114,9 +118,9 @@
   
   /* view_products.php */
   .display_product table {
-    width: 100%;
+    width:100%;
     text-align: center;
-   
+
   }
 
   .table_heading h3{
@@ -130,7 +134,7 @@
   }
   .display_product table thead th {
     padding: 1.5rem;
-    font-size: 1.3rem;
+    /* font-size: 1.3rem; */
     background-color: var(--color2);
     color: var(--white);
   }
@@ -140,7 +144,7 @@
   }
   td {
     padding: 1rem;
-    font-size: 1.2rem;
+    /* font-size: 1.2rem; */
     color: var(--color1);
     border: 1px solid var(--white);
     text-transform: capitalize;
@@ -207,7 +211,9 @@
     text-align: center;
     margin-top: -0.5rem;
     margin-bottom: 0.8rem;
-    animation: slide 5s forwards; /* Slide animation for error message */
+    margin-left: auto;
+    margin-right: auto;
+    animation: slide 1s forwards; /* Slide animation for error message */
   }
   
   @keyframes slide {
