--- a/frontend/src/components/Home/Login.css
+++ b/frontend/src/components/Home/Login.css
@@ -1,17 +1,17 @@
 .login{
-    background: url('../images/login-bg.jpg') no-repeat center center fixed;
-    background-size: cover;
+    /* background: url('../images/login-bg.jpg') no-repeat center center fixed;
+    background-size: cover; */
     width: 100%;
     height: 100vh;
 }
 
-#errorMessage{
+/* #errorMessage{
     background-color: #fff;
     text-align: center;
     color: #dc143c;
     font-size: 20px;
     padding: 10px;
-}
+} */
 
 .loginHeader{
     text-align: center;
@@ -26,14 +26,14 @@
     padding-bottom: 50px;
 }
 
-.loginHeader p{
+/* .loginHeader p{
     color: #fff;
     font-size: 30px;
     font-weight: 600;
     margin: 0px;
     display: inline-block;
     text-transform: uppercase;
-}
+} */
 
 .loginHeader p::after{
     content: '';
@@ -43,15 +43,39 @@
     margin: 0 auto;
 }
 
-.loginBody form{
-    margin: 0 auto;
-    width: 400px;
-    background-color: rgba(0,0,0,.5);
-    padding: 50px;
+.form{
+    /* margin:auto; */
+    width: 36%;
+    /* width: 400px; */
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 2% 4% 6% 3%;
     border: 2px solid #fff;
+    position: absolute;
     border-radius: 8px;
+    margin-left: 32%;
+    margin-top: -75px;
+    backdrop-filter: blur(5px);
+    
 }
-
+@media(min-width: 576px) and (max-width:768px){
+    .form{
+        width: 48%;
+        margin-left: 26%;
+        margin-top: -45px;
+    }
+}
+@media(max-width: 576px){
+    .form{
+        width: 68%;
+        margin-left: 16%;
+        margin-top: -35px;
+    }
+}
+#h1 {
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding-bottom: 25px;
+}
 .loginInputsContainer{
     margin-top: 15px;
 }
@@ -69,7 +93,8 @@
     padding: 9px;
     margin-bottom: 10px;
     width: 100%;
-    border: 2px solid #dc143c;
+    /* border: 2px solid #dc143c; */
+    /* border-radius: 25%; */
     font-size: 18px;
     text-align: center;
 }
