--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,12 @@
-.navbar {
-  background-color: rgb(25, 25, 60);
+.bg-color-primary {
+  background-color: #000000;
+  /* background-color: rgb(37, 2, 116); */
 }
 
 .sidebar {
+  background-color: rgb(25, 25, 60);
+}
+.navbar {
   background-color: rgb(25, 25, 60);
 }
 
@@ -29,6 +33,9 @@
   .md-w-50 {
     width: 50%;
   }
+  .md-w-75 {
+    width: 75%;
+  }
 }
 
 @media(min-width: 576px) and (max-width:768px) {
@@ -41,8 +48,14 @@
   .sm-w-25{
     width: 25%;
   }
+  .sm-w-100{
+    width: 100%;
+  }
   .sm-w-75{
     width: 75%;
+  }
+  .sm-flex-column{
+    flex-direction: column;
   }
 }
 @media (max-width:576px) {
@@ -51,6 +64,9 @@
   }
   .xs-w-100{
     width: 100%;
+  }
+  .xs-flex-column{
+    flex-direction: column;
   }
 }
 
@@ -89,6 +105,12 @@
 }
 .h-32{
   height: 8rem;
+}
+.h-50{
+  height: 50%;
+}
+.h-50vh{
+  height: 50vh;
 }
 .h-64{
   height: 16rem;
@@ -153,6 +175,6 @@
 
 
 .hover-bg-blue-500:hover {
-  background-color: rgb(5, 5, 20);
+  background-color: rgb(0, 0, 0);
 }
 
