--- a/frontend/src/components/Company/CompanyApp.css
+++ b/frontend/src/components/Company/CompanyApp.css
@@ -125,9 +125,9 @@
   width: 100%;
 }
 
-.hover-bg-blue-500:hover {
-  background-color: rgb(5, 5, 20);
-}
+/* .hover-bg-blue-500:hover {
+  background-color: rgb(0, 0, 0);
+} */
 .z-1000{
   z-index: 1000;
 }
