--- a/frontend/src/components/Home/LoginRegister.css
+++ b/frontend/src/components/Home/LoginRegister.css
@@ -143,16 +143,30 @@ form.check .input-box{
     
 
  }
+ .option .select{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    /* border: 2px solid rgba(247, 244, 244, 0.1);
+    border-radius: 40px; */
+    font-size: 16px;
+    color: #fff;
+    /* padding: ; */
+    /* padding: 20px 45px 20px 20px; */
+ }
 .input-box input::placeholder{
     color:#fff;
 }
 
 .icon{
     position: absolute;
-    right: 20px;
+    right: 22px;
     top: 50%;
     translate: 0 -50%;
     font-size: 16px;
+    color: #fff;
     
 
 
@@ -234,7 +248,8 @@ form .register-link{
   }
   
   .message.error {
-    background-color: #545e76;
-    color: #efe9e9;
-    border: 1px solid #f5c6cb;
+    background-color: #ffffff;
+    color: #ff0000;
+    font-size:10px;
+    border: 3px solid #ff0000;
   }
