--- a/frontend/src/components/Home/LoginRegister.css
+++ b/frontend/src/components/Home/LoginRegister.css
@@ -235,21 +235,43 @@ form .register-link{
     color: #f7f8f7;
 }
 .message {
-    margin-top: 10px;
-    margin-bottom: 30px;
-    padding: 10px;
-    border-radius: 5px;
+    width: 46%;
+    z-index: 10000;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    margin-left: 27%;
+    margin-top: 1px;
+    margin-bottom: 20px;
+    padding: 5px;
+    border-radius: 15px;
+    justify-content: center;
+    display: flex;
   }
   
   .message.success {
-    background-color: #2dd254;
-    color: #f7f8f7;
-    border: 1px solid #c3e6cb;
+    background-color:rgb(18, 168, 7);
+    color: #ffffff;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    font-size:15px;
+    border-radius: 15px;
+
+    border: 1px solid #ffffff;
+    /* background: transparent; */
+    
+    outline: none;
   }
   
   .message.error {
-    background-color: #ffffff;
+    background-color:rgba(255,255,255,.7);
     color: #ff0000;
-    font-size:10px;
-    border: 3px solid #ff0000;
+    font-size:15px;
+    border-radius: 15px;
+
+    border: 1px solid #ff0000;
+    /* background: transparent; */
+    
+    outline: none;
   }
