--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -65,7 +65,7 @@
   .xs-w-100{
     width: 100%;
   }
- 
+
   .xs-flex-column{
     flex-direction: column;
   }
@@ -147,6 +147,9 @@
 .w-20{
   width: 20%;
 }
+.w-24{
+  width:24%;
+}
 .w-32{
   width: 8rem;
 }
@@ -173,9 +176,16 @@
 .w-full {
   width: 100%;
 }
+.w-90p{
+  width: 90%;
+}
 
 
 .hover-bg-blue-500:hover {
   background-color: rgb(0, 0, 0);
+}
+
+.m-auto{
+  margin: auto;
 }
 
