--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -48,6 +48,9 @@
   .sm-w-25{
     width: 25%;
   }
+  .sm-w-50{
+    width: 50%;
+  }
   .sm-w-100{
     width: 100%;
   }
@@ -65,6 +68,7 @@
   .xs-w-100{
     width: 100%;
   }
+
 
   .xs-flex-column{
     flex-direction: column;
@@ -125,7 +129,9 @@
 .h-96{
   height: 24rem;
 }
-
+.min-height-100vh{
+  min-height: 100vh;
+}
 
 .fixed {
   position: fixed;
@@ -178,6 +184,12 @@
 }
 .w-90p{
   width: 90%;
+}
+.w-30{
+  width: 30%;
+}
+.w-70{
+  width: 70%;
 }
 
 
