--- a/frontend/src/components/Home/Faqs.css
+++ b/frontend/src/components/Home/Faqs.css
@@ -1,7 +1,9 @@
 .faq-container{
     background: url('../images/faq-bg.jpg') no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center center;
+    background-attachment: fixed;
+    
 }
 
 .faq-accordion{
