review and dashboard count updated

--- a/frontend/src/components/Company/CompanyProduct.css
+++ b/frontend/src/components/Company/CompanyProduct.css
@@ -107,6 +107,7 @@
     cursor: pointer;
     margin-top: 2rem;
     margin: 0 auto;
+    text-decoration: none;
   }
   .cancel_btn {
     background-color: var(--red);
