--- a/frontend/src/components/Company/review/reviewStyle.css
+++ b/frontend/src/components/Company/review/reviewStyle.css
@@ -20,4 +20,48 @@
   .submit_star {
     cursor: pointer;
   }
-  
+
+  .jumbotron {
+    font-size: 1.5rem; 
+}
+
+h1 {
+    font-size: 2.0rem; 
+}
+
+.progress-label-left, .progress-label-right {
+    font-size: 1rem; 
+}
+
+#avg_rating, #total_review {
+    font-size: 2.0rem; 
+}
+
+.starAvg {
+  font-size: 1.2rem; /* Adjust size as needed */
+}
+
+.card-header {
+  font-size: 1.4rem; 
+}
+
+
+.card-body {
+  font-size: 1.2rem; 
+}
+
+
+.card-footer {
+  font-size: 1rem; 
+}
+
+.jumbotron {
+  background-color: #e1e5e9; 
+  padding: 10px;
+  border-radius: 0.5rem; 
+}
+
+.jumbotron img {
+  max-width: 100%;
+  height: auto; 
+}
