--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -220,6 +220,7 @@
     flex-direction: row;
     padding: 20px;
     text-align: center;
+    justify-content: space-between;
 }
 
 .homePageFeature{
