--- a/frontend/src/components/Company/CompanyProduct.css
+++ b/frontend/src/components/Company/CompanyProduct.css
@@ -448,7 +448,7 @@
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5); 
 }
 
-/* message notification status  */
+/* message notification status  */  /* message notification status  */
 
 .notification-badge {
   position: absolute;
