--- a/frontend/src/components/Company/CompanyProduct.css
+++ b/frontend/src/components/Company/CompanyProduct.css
@@ -389,4 +389,76 @@
 
   
   
+  table tbody tr:hover {
+    background-color: #e7e0e3; /* Change this to your desired hover color */
+    transition: background-color 0.3s; /* Optional: smooth transition */
+}
+
+/* Optional: Style for empty text */
+.empty_text {
+    text-align: center;
+    font-size: 1.2rem;
+    color: #e8dfdf;
+}
+
+/* message card */
+
+.card-color{
+  background-color: var(--color5);
+}
+
+/* order date picker */
+
+.datepicker-wrapper {
+  display: inline-block; 
+}
+
+.small-datepicker {
+  width: 120px; 
+  font-size: 0.9rem; 
+  padding: 4px; 
+  border: 1px solid #ced4da; 
+  border-radius: 0.25rem; 
+}
+
+.small-datepicker:focus {
+  outline: none; 
+  border-color: #80bdff; 
+  box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+}
+
+.save-button {
+  background-color: #007bff; 
+  color: white; 
+  border: none; 
+  border-radius: 0.25rem; 
+  padding: 3px 8px; 
+  font-size: 1rem; 
+  cursor: pointer; 
   
+}
+
+.save-button:hover {
+  background-color: #0056b3; 
+  transform: scale(1.05); 
+}
+
+.save-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5); 
+}
+
+/* message notification status  */  /* message notification status  */
+
+.notification-badge {
+  position: absolute;
+  top: -0.1px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 0.0rem 0.4rem;
+  font-size: 0.75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
