add some css and change products status

--- a/frontend/src/components/Company/CompanyProduct.css
+++ b/frontend/src/components/Company/CompanyProduct.css
@@ -18,7 +18,7 @@
     --color6: #335f67d9;
     --black: #000;
     --white: #fff;
-    --lightgray: #e7d8d8;
+    --lightgray: #eedede;
     --red: rgb(245, 39, 67);
   }
   body {
