--- a/frontend/src/components/Home/LoginRegister.css
+++ b/frontend/src/components/Home/LoginRegister.css
@@ -93,7 +93,7 @@ form h1{
 form .input-box{
     position: relative;
     width: 100%;
-    height: 50px;
+    height: 40px;
     margin: 15px 0;
    
 }
@@ -235,43 +235,34 @@ form .register-link{
     color: #f7f8f7;
 }
 .message {
-    width: 30%;
+    width: 35%;
     z-index: 10000;
-    height: 100%;
     background: transparent;
     border: none;
     outline: none;
-     margin-left: 35%;
-    margin-top: 1px;
-    margin-bottom: 22px; 
-    padding: 5px;
+     margin-left: 32.5%;
+    margin-top: -1px;
+    margin-bottom: 15px; 
+    padding: 3px;
     border-radius: 12px;
     justify-content: center;
     display: flex;
   }
   
   .message.success {
-    background-color:rgb(18, 168, 7);
-    color: #ffffff;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    font-size:15px;
+    background-color: rgba(18, 168, 7, 0.7); /* Adding opacity (0.7) */
+    color: #ffffff; /* Text color remains solid */
+    font-size: 0.8rem;
     border-radius: 15px;
-
     border: 1px solid #ffffff;
-    /* background: transparent; */
-    
     outline: none;
-  }
-  
-  .message.error {
-    background-color:rgba(255,255,255,.7);
-    color: #ff0000;
-    font-size:15px;
-    border-radius: 15px;
+}
 
+.message.error {
+    background-color: rgba(241, 236, 236, 0.4); 
+    color: #ff0000;
+    font-size: 0.8rem;
+    border-radius: 15px;
     border: 1px solid #ff0000;
-    /* background: transparent; */
-    
     outline: none;
-  }
+}
