message section notification update

--- a/frontend/src/components/Company/CompanyProduct.css
+++ b/frontend/src/components/Company/CompanyProduct.css
@@ -14,7 +14,7 @@
     --color2: #7892ba;
     --color3: #9b95e4;
     --color4: #2cecf0;
-    --color5: #a09ebe;
+    --color5: #d6d5e4;
     --color6: #335f67d9;
     --black: #000;
     --white: #fff;
