--- a/frontend/src/components/Company/CompanyProduct.css
+++ b/frontend/src/components/Company/CompanyProduct.css
@@ -1,7 +1,7 @@
 /* src/App.css */
 
 * {
-    margin: 0;
+    
     padding: 0;
     box-sizing: border-box;
     outline: none;
@@ -9,7 +9,8 @@
     text-decoration: none;
     font-family: "Poppins", sans-serif;
   }
-  :root {
+
+  /* :root {
     --color1: #0f124b;
     --color2: #7892ba;
     --color3: #9b95e4;
@@ -19,6 +20,20 @@
     --black: #000;
     --white: #fff;
     --lightgray: #eedede;
+    --red: rgb(245, 39, 67);
+  } */
+
+  :root {
+    --color1: #0f124b;
+    --color2: #7892ba;
+    --color3: #9b95e4;
+    --color4: #2cecf0;
+    --color5: #d6d5e4;
+    --color6: #335f67d9;
+    --black: #000;
+    --color8: #0e0b0b;
+    --white: #ffffff;
+    --lightgray: #ffffff;
     --red: rgb(245, 39, 67);
   }
   body {
@@ -30,6 +45,8 @@
   
    .maincontainer {
     margin: auto;
+    margin-right: 20px;
+    margin-left: 20px;
     padding-bottom: 5rem;
     height: 100%;
     background-color: var(--lightgray);
@@ -130,6 +147,12 @@
     color: var(--color3);
     background-color: rgb(171, 70, 77);
   }
+
+  .customer-btn:hover {
+    background-color: #17a2b8; 
+    color: white; 
+    border-color: #138496;
+  }
   
   /* view_products ,Order , Customer tables  */
 
@@ -138,8 +161,6 @@
     text-align: center;
 
   }
-
-  
 
   .table_heading {
     display: flex;
@@ -193,7 +214,7 @@
     font-size: 20px;
   }
   
-
+/* table some css add */
   .display_details table thead th {
     padding: 1.5rem;
     font-size: 1.3rem;
@@ -202,14 +223,14 @@
   }
 
   .display_details table tr{
-    border: 1px solid var(--white);
+    border: 2px solid rgb(113, 112, 112);
   }
 
   td {
     padding: 1rem;
     font-size: 1.2rem;
     color: var(--color1);
-    border: 1px solid var(--white);
+    border: 1px solid var(--color8);
     text-transform: capitalize;
   }
 
@@ -220,6 +241,8 @@
     text-align: center;
   }
 
+
+  /* buttons */
 
   .btns {
     display: flex;
@@ -245,6 +268,16 @@
     color: var(--color2);
   }
 
+  .update_product_btn:hover{
+    color:rgb(121, 100, 228);
+  }
+
+  .delete_product_btn:hover{
+    color:rgb(224, 114, 114);
+  }
+
+
+  /* update product input container */
   .price_container {
     display: flex;
     align-items: center;
@@ -264,6 +297,7 @@
     height: 70%;
   }
   
+
   img {
     width: 20%;
     margin: 0 auto;
@@ -285,6 +319,33 @@
     margin-right: auto;
     animation: slide 1s forwards; /* Slide animation for error message */
   }
+
+  /* order table calender icon  */
+
+  .calender-icon {
+    color: rgb(83, 19, 174);
+    border: none;
+    cursor: pointer;
+    padding:10px ;
+
+  }
+  
+  .calender-icon:hover {
+    color: #007bff;
+  }
+  
+  .calendar-icon {
+    font-size: 18px;
+    color: #007bff;
+    transition: color 0.3s ease;
+  }
+  
+  .calendar-icon:hover {
+    color: #0056b3;
+  }
+
+
+  /* Responsive css */
   
   @keyframes slide {
     0% {
@@ -297,11 +358,22 @@
     }
   }
   
-
   
   @media (max-width: 991px) {
     html {
       font-size: 90%;
+    }
+  }
+
+  @media (max-width: 912px) {
+    html {
+      font-size: 88%;
+    }
+  }
+
+  @media (max-width: 850px) {
+    html {
+      font-size: 85%;
     }
   }
   
@@ -375,8 +447,6 @@
     }
   }
   
-
-
   @media (max-width: 450px) {
     html {
       font-size: 50%;
@@ -399,10 +469,11 @@
   }
 
   
+  /* table row wise hover */
   
   table tbody tr:hover {
-    background-color: #e7e0e3; /* Change this to your desired hover color */
-    transition: background-color 0.3s; /* Optional: smooth transition */
+    background-color: #ece9f4; 
+    transition: background-color 0.3s; 
 }
 
 /* Optional: Style for empty text */
@@ -472,4 +543,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+
+/* log-out css */
+.logout-btn:hover {
+   background-color: #f8f9fa;
+  color: #dc3545; 
+  border-radius: 5px; 
 }
