--- a/frontend/src/components/Home/Products.css
+++ b/frontend/src/components/Home/Products.css
@@ -12,16 +12,20 @@
   
   /* Image Styling */
   .product-image {
-    width: 300px; /* Set width to 300px */
-    height: 300px; /* Set height to 300px */
+    width: 100%; /* Set width to 300px */
+    height: 10%; /* Set height to 300px */
     object-fit: cover; /* Maintain aspect ratio */
     margin: 0 auto; /* Center image */
     border-radius: 10px; /* Rounded corners */
   }
-  
+  .card-text-size{
+    font-size: 8px;
+  }
   /* Font size for product names */
   .product-name {
-    font-size: 16px; /* Reduced font size */
+    font-size: 10px;
+    font-weight: bold; 
+    /* Reduced font size */
   }
   
   /* Search Input Styling */
