--- a/frontend/src/components/Customer/cartitems.css
+++ b/frontend/src/components/Customer/cartitems.css
@@ -169,4 +169,31 @@
     box-shadow: 0 8px 40px rgba(0, 255, 255, 0.6), 0 0 30px rgba(255, 0, 255, 0.6); /* Enhanced glow effect */
 }
 
+.item-checkbox{
+    width: 20px;  /* Adjust size here */
+    height: 20px; /* Adjust size here */
+    border: 2px solid #ccc; /* Border color */
+    border-radius: 4px; /* Rounded corners */
+    display: inline-block;
+    position: relative;
+    margin-right: 10px;
+}
 
+.invoice-table td{
+    font-size: 130%;
+}
+
+.c-table-tdata{
+    font-size: 100%;
+}
+
+.confirm-button{
+    font-size: 130%;
+}
+
+.cancel-button{
+    font-size: 130%;
+}
+#tm{
+    font-size: 150%;
+}
